@@ -4,6 +4,7 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 1.0.10
 * closed MYFACES-177
+* closed MYFACES-199
 ----------------------------------------------------------------------
 Changes in Release 1.0.9
 * added support for portlet api (MYFACES-86). Thanks to Stan Silver (JBoss Group)
